# OxiPipe

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
core/: Cargo.toml
core/src/: job.rs  job_queue.rs  lib.rs  pipeline.rs
examples/: cron.yml  hello.yml
scheduler/: Cargo.toml
scheduler/src/: args.rs  chroniq.rs  main.rs  scheduler.rs  web.rs
src/: chroniq.rs  job.rs  main.rs  pipeline.rs  schedule.rs  scheduler.rs  web.rs
