[workspace]
members = [ 
    "cli",
    "scheduler"
]
resolver = "3"

[workspace.dependencies]
core = { path = "./core" }
axum = { version = "0.8.4", features = ["macros"] }
bollard = "0.18.1"
chrono = "0.4.41"
cron = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
humantime = "2.2.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
