[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
core.workspace = true
log.workspace = true
bollard.workspace = true
futures.workspace = true
cron.workspace = true
humantime.workspace = true
axum.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenv.workspace = true
